fix stepping spacing

--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ textarea {
 .code, .codebox, code, input {
   font-family: Consolas, inconsolata UFW, DejaVu Sans Mono, Monaco, Lucida Console, Liberation Mono, Bitstream Vera Sans Mono, Courier New, monospace;
   font-size: 14px;
+}
+.code, code, input {
   white-space:pre-wrap;
 }
 .codebox > * {
